# Xelt.py

./: .env-docker  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  dev-requirements.txt  development.md  docker-compose-dev.yml  docker-compose.yml  migrate.py  mypy.ini  noxfile.py  pyproject.toml  requirements.txt  schema.prisma  tox.ini
.github/: dependabot.yml
.github/workflows/: codeql.yml  dependabot-auto-merge.yml  docker-build.yml  lint.yml  release.yml  tests.yml
bot/: launcher.py  xelt.py  xeltbot.py  xeltcore.py
bot/cogs/: __init__.py  admin.py  db.py  dev-tools.py  dev_tools.py  events_handler.py  help.py  meta.py  prefix.py  typerace.py  xelt.py
bot/libs/cache/: __init__.py  base_cache.py  cache.py  cp_manager.py  decorators.py  global_cp.py  key_builder.py  mem_storage.py  mem_store_global.py  redis_conn_pool_cache.py  xelt_cache.py
bot/libs/models/: schema.prisma
bot/libs/ui/prefixes/: views.py
bot/libs/utils/: __init__.py  backoff_utils.py  checks.py  config.py  connection_checks.py  context.py  embeds.py  handler.py  help.py  logger.py  modals.py  prefix.py  redis_ctx.py  redis_utils.py  reloader.py  utils.py  views.py  xelt_logger.py
bot/libs/utils/help/: __init__.py  sources.py  ui.py  xelt_help.py
bot/libs/utils/pages/: __init__.py  paginator.py  sources.py
bot/libs/utils/redis/: __init__.py  connections.py
docker/: Dockerfile  start.sh
docker/pg/: Dockerfile  init.sh
docs/: contributing.md  installing-requirements.md
envs/: dev.env  docker.env
migrations/: 20230528_initial_up_rev1.sql  20230605_rev1_up_rev2.sql
tests/redis/: test_conns.py  test_decorators.py  test_key_builder.py  test_mem_storage.py  test_redis_cache.py  test_redis_conn.py  test_redis_conn_pool_cache.py  test_xelt_cp_manager.py  test_xelt_gcp.py
tests/utils/: test_backoff.py  test_datetime_parse.py
