[tool.poetry]
name = "xelt.py"
version = "3.0.0"
description = "Xelt is a multi-purpose discord bot with features ranging from user information to music!"
authors = ["No767, Edqe14, ThEditor"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4"
discord-py = {extras = ["voice"], version = "^2.3.1"}
python-dotenv = "^1.0.0"
aiodns = "^3.0.0"
brotli = "^1.0.9"
uvloop = "^0.17.0"
psutil = "^5.9.5"
orjson = "^3.9.1"
ciso8601 = "^2.3.0"
anyio = "^3.7.0"
redis = {extras = ["hiredis"], version = "^4.6.0"}
faust-cchardet = "^2.1.18"
random-word = "^1.0.11"
asyncpg = "^0.27.0"
asyncpg-trek = "^0.3.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.3"
pyinstrument = "^4.5.0"
pyright = "^1.1.316"
watchfiles = "^0.19.0"
jishaku = "^2.5.1"


[tool.poetry.group.tests.dependencies]
pytest = "^7.3.2"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
nox = "^2023.4.22"
nox-poetry = "^1.0.2"


[tool.isort]
profile = 'black'

[tool.pyright]
include = ["bot/**"]
exclude = ["**/__pycache__", "**/.mypy_cache", "**/.dmpypy.json"]
ignore = ["docker"]
reportMissingImports = true
reportMissingTypeStubs = false

[tool.bandit]
skips = ["B311", "B101"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
