[tool.poetry]
name = "xelt.py"
version = "3.0.0"
description = "Xelt is a multi-purpose discord bot with features ranging from user information to music!"
authors = ["No767, Edqe14, ThEditor"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4"
discord-py = {extras = ["voice"], version = "^2.3.2"}
python-dotenv = "^1.0.0"
aiodns = "^3.0.0"
brotli = "^1.0.9"
uvloop = "^0.17.0"
psutil = "^5.9.5"
orjson = "^3.9.5"
ciso8601 = "^2.3.0"
redis = {extras = ["hiredis"], version = "^5.0.0"}
faust-cchardet = "^2.1.18"
random-word = "^1.0.11"
asyncpg = "^0.28.0"
asyncpg-trek = "^0.3.1"
discord-ext-menus = {git = "https://github.com/Rapptz/discord-ext-menus.git", rev = "8686b5d1bbc1d3c862292eb436ab630d6e9c9b53"}

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
pyinstrument = "^4.5.1"
pyright = "^1.1.326"
watchfiles = "^0.20.0"
jishaku = "^2.5.1"
ruff = "^0.0.286"


[tool.poetry.group.tests.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
nox = "^2023.4.22"
nox-poetry = "^1.0.3"


[tool.isort]
profile = 'black'

[tool.pyright]
include = ["bot/**"]
exclude = [
    "**/__pycache__", 
    "**/.mypy_cache", 
    "**/.dmpypy.json", 
    "docs",
    "docker"
]
reportMissingImports = true
typeCheckingMode = "basic"
reportUnnecessaryTypeIgnoreComment = "warning"

[tool.bandit]
skips = ["B311", "B101"]

[tool.ruff]
ignore = ["E501"]
select = ["E", "F", "N"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
